--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -95,6 +95,7 @@ img {
   display: flex;
   flex-direction: column;
   line-height: 1.2;
+  min-height: 1.2em;
 }
 
 .nav-toggle {
@@ -1006,6 +1007,7 @@ main {
 
 .footer-brand-text {
   margin-top: 1rem;
+  min-height: 4.5rem;
 }
 
 .footer-brand-text h3 {
@@ -1014,6 +1016,8 @@ main {
   font-size: 1.25rem;
   font-weight: 600;
   font-family: 'Space Grotesk', sans-serif;
+  line-height: 1.3;
+  min-height: 1.625rem;
 }
 
 .footer-brand-text p {
@@ -1021,6 +1025,7 @@ main {
   line-height: 1.6;
   margin: 0;
   font-size: 0.9rem;
+  min-height: 2.88rem;
 }
 
 .footer-logo {
